# python-core-home_work_7

./: README.md
clean_folder/: README.md  setup.cfg  setup.py
clean_folder/clean_folder/: __init__(bad).py  __init__.py  clean_folder(bad).py  file_parser.py  main.py  normalize.py
clean_folder/clean_folder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
clean_folder/clean_folder_145_236.egg-info/: PKG-INFO  SOURCES.txt
