[project]
name = "clean_folder_145_236"
version = "0.0.1"
authors = [
  { name="Eugen Zghardan", email="zakolochennoe457@gmail.com" },]
description = "This is my first test package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",]

[project.urls]
"Homepage" = "https://github.com/Yevhenii3145/python-core-home_work_7"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[options.entry_points]
console_scripts =
    clean_folder = clean_folder:start
